update blog front page:

--- a/content/published/2017-05-03-hero-ups.md
+++ b/content/published/2017-05-03-hero-ups.md
@@ -8,10 +8,8 @@ description: ""
 author: "Damien"
 image: ""
 tags:
-  - OpenShift
-  - UPS
-  - Push Notifications
-  - Mobile
+  - Containers
+  - Unified Push Server
 URL: "/blog/2017/05/03/ups-on-openshift/"
 categories: [Articles]
 ---
